backend_main_django/test-nginx.yaml
# test-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-nginx
  namespace: edu-evgenij-sozykin
spec:
  containers:
  - name: nginx
    image: nginx:1.23-alpine
    ports:
    - containerPort: 80
