backend_main_django/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
