backend_main_django/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
  - http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
